Commit and push second stage of refactoring.